--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 tensorflow>=2.0
+keras<=3.4.1
 healpy>=1.13.0
 setuptools>=46.1.3
 numba>=0.49.0
 scipy>=1.4.1
 numpy>=1.16
+camb>=1.5.0
+tqdm>=4.46.0
